# ffmpegexporter

./: CMakeLists.txt  bootstrap.sh  ffmpegexporter.cpp  ffmpegexporter.h  main.cpp
cmake/: FindFFmpeg.cmake  RulesFFmpeg.cmake
